--- a/pages/admin/publishSign/publishSign.wxml
+++ b/pages/admin/publishSign/publishSign.wxml
@@ -43,7 +43,17 @@
         </button>
         <input class='publish-form-input margin-top-lg' wx:for='{{requirements}}' type='digit' placeholder='请输入要求{{index + 1}}' data-index='{{index}}'>
         </input>
+		<view class="publish-form-title">
+			图片上传
+		</view>
+		<view class="action">
+			4/4
+		</view>
     </view>
+
+
+
+
     <view wx:if='{{num == 1}}'>
         <i-grid>
             <i-grid-item i-class="{{isSelected1? 'gridItemSelected':''}}" data-itemId="name" bindtap="handleGridItemClick">
