--- a/pages/admin/interviewManage/index.wxml
+++ b/pages/admin/interviewManage/index.wxml
@@ -8,7 +8,7 @@
         <button class='cu-btn bg-blue lg shadow' style='width:400rpx' bindtap='back'>返回</button>
     </view>
 </view>
-<view wx:else>
+<view wx:else style='width:100%'>
     <view class="cu-capsule round padding">
         <view class="cu-tag bg-blue ">
             当前排队人数
@@ -40,11 +40,7 @@
                 </view>
             </view>
             <view class="text-content">
-                折磨生出苦难，苦难又会加剧折磨，凡间这无穷的循环，将有我来终结！
-            </view>
-            <view class="grid flex-sub padding-lr {{isCard?'col-3 grid-square':'col-1'}}">
-                <view class="bg-img {{isCard?'':'only-img'}}" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);" wx:for="{{isCard?9:1}}" wx:key="{{index}}">
-                </view>
+                {{queueListInfo[queueListInfo.length-1].introduction}}
             </view>
             <view class='fl padding'>
                 <button class='cu-btn bg-blue round shadow' bindtap='startRecord' wx:if='{{!isRecording}}'>
@@ -55,13 +51,13 @@
                 </button>
             </view>
             <view class='fr padding'>
-                <button class='cu-btn bg-green round shadow' bindtap='comleteInterview'>
+                <button class='cu-btn bg-green round shadow' bindtap='completeInterview'>
                     面试完成
                 </button>
             </view>
             
         <view class="cu-form-group margin-top" style='width:100%;'>
-            <textarea maxlength="-1" bindinput="textareaAInput" placeholder="这里可以写下对该同学的评价哦" value='{{remark}}'></textarea>
+            <textarea maxlength="-1" bindinput="textareaInput" placeholder="这里可以写下对该同学的评价哦" value='{{remark}}'></textarea>
         </view>
         </view>
 
