--- a/pages/rookie/index/index.wxml
+++ b/pages/rookie/index/index.wxml
@@ -1,4 +1,15 @@
 <!--pages/rookie/index/index.wxml-->
+<view >
+
+</view>
+
+
+
+
+
+
+
+
 
 <view class="cu-bar bg-white search fixed" style="top:{{CustomBar}}px;">
   <view class="search-form round">
@@ -10,25 +21,21 @@
   </view>
 </view>
 <swiper class="card-swiper round-dot all-width" indicator-dots="true" circular="true" autoplay="true" interval="5000" duration="500" bindchange="cardSwiper" indicator-color="#8799a3" indicator-active-color="#0081ff">
-  <swiper-item wx:for="{{swiperList}}" wx:key class="{{cardCur==index?'cur':''}}">
-    <view class="swiper-item">
-      <image src="{{item.url}}" mode="aspectFill" wx:if="{{item.type=='image'}}"></image>
-
-      <video src="{{item.url}}" autoplay loop muted show-play-btn="{{false}}" controls="{{false}}" objectFit="cover" wx:if="{{item.type=='video'}}"></video>
-
-      
+  <swiper-item wx:for="{{orgPost}}" wx:key class="{{cardCur==index?'cur':''}}" data-oid='{{item.oid}}' bindtap='intro_detail'>
+    <view class="swiper-item  bg-white">
+      <image src="{{item.post_url}}" mode="aspectFit"></image>
     </view>
   </swiper-item>
 </swiper>
- <view class="cu-card article no-card all-width2" bindtap='intro_detail'>
+ <view class="cu-card article no-card all-width2 margin-bottom-lg" bindtap='intro_detail' data-oid='{{item.oid}}' wx:for='{{orgList}}'>
   <view class="cu-item shadow">
     <view class="title">
-      <view class="text-cut" style='text-align:left'>中南大学学生会</view>
+      <view class="text-cut" style='text-align:left'>{{item.name}}</view>
     </view>
     <view class="content">
-      <image src="https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg" mode="aspectFill"></image>
+      <image src="{{item.post_url?item.post_url:'https://mini2019.oss-cn-hangzhou.aliyuncs.com/defaultPost.png'}}" mode="aspectFit"></image>
       <view class="desc">
-        <view class="text-content"> 折磨生出苦难，苦难又会加剧折磨，凡间这无穷的循环，将有我来终结！真正的恩典因不完整而美丽，因情感而真诚，因脆弱而自由！</view>
+        <view class="text-content">{{item.introduction?item.introduction:'暂无'}}</view>
         <!-- <view>
           <view class="cu-tag bg-red light sm round">正义天使</view>
           <view class="cu-tag bg-green light sm round">史诗</view>
