--- a/pages/rookie/introduction/conclusion.wxss
+++ b/pages/rookie/introduction/conclusion.wxss
@@ -2,7 +2,7 @@
 page,
 .page,
 .page__bd {
-  height: 100%;
+  /* height: 100%; */
   font-family: "黑体";
   background-color: #eeece8;
   padding-bottom: 250rpx;
