--- a/pages/rookie/me/index.wxml
+++ b/pages/rookie/me/index.wxml
@@ -2,7 +2,7 @@
 
 <!-- <text>pages/test/test.wxml</text> -->
 <view class='header'>
-    <view class='avatarCircle'>
+    <view class='avatarCircle' bindtap='lookmessage'>
         <open-data class="userinfo-avatar" type="userAvatarUrl"></open-data>
     </view>
     <view class='avatarWave' animation="{{waveAnimation}}"></view>
@@ -13,40 +13,40 @@
     <view class='header-shadow'></view>
 </view>
 
- <view class="cu-list grid col-blue no-border mid-button">
+<view class="cu-list grid col-blue no-border mid-button">
     <view class="cu-item bloc zindex" bindtap='lookmysignup'>
-      <view class="cuIcon-text text-blue ">
-      </view>
-      <text>我的报名</text>
+        <view class="cuIcon-text text-blue ">
+        </view>
+        <text>我的报名</text>
     </view>
     <view class="cu-item bloc">
-      <view class="cuIcon-my text-blue" bindtap='lookmyrecruit'>
-      </view>
-      <text>我的面试</text>
+        <view class="cuIcon-my text-blue" bindtap='lookmyrecruit'>
+        </view>
+        <text>我的面试</text>
     </view>
-  </view>
-    <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius mid-button">
+</view>
+<view class="cu-list menu card-menu shadow-lg radius mid-button">
     <view class="cu-item arrow">
-      <view class="content bind" bindtap="lookmessage" >
-        <text class="cuIcon-profile text-grey"></text>
-        <text class="text-black txt">个人信息</text>
-      </view>
-    </view>
-     <view class="cu-item arrow">
-      <view class="content bind" bindtap="" >
-        <text class="cuIcon-service text-grey"></text>
-        <text class="text-black txt">我要面试</text>
-      </view>
+        <view class="content bind" bindtap="lookmessage">
+            <text class="cuIcon-profile text-grey"></text>
+            <text class="text-black txt">个人信息</text>
+        </view>
     </view>
     <view class="cu-item arrow">
-      <view class="content bind" bindtap="" >
-        <text class="cuIcon-mail text-grey"></text>
-        <text class="text-black txt">帮助&反馈</text>
-      </view>
+        <view class="content bind" bindtap="gotoInterview">
+            <text class="cuIcon-service text-grey"></text>
+            <text class="text-black txt">我要面试</text>
+        </view>
     </view>
-  </view>
+    <view class="cu-item arrow">
+        <view class="content bind" bindtap="">
+            <text class="cuIcon-mail text-grey"></text>
+            <text class="text-black txt">帮助&反馈</text>
+        </view>
+    </view>
+</view>
 <button class="cu-btn round lg logout">退出登录</button>
- <!-- <view class="cu-bar tabbar margin-bottom-xl bg-white" id='tab'>
+<!-- <view class="cu-bar tabbar margin-bottom-xl bg-white" id='tab'>
     <view class="action text-gray">
       <view class="cuIcon-homefill"></view> 首页
     </view>
