--- a/pages/rookie/message/detail.wxml
+++ b/pages/rookie/message/detail.wxml
@@ -11,53 +11,57 @@
 	</view> -->
 <view class="cu-bar justify-center">
     <view class="action sub-title">
-      <text class="text-xl text-bold text-blue">个人信息</text>
-      <text class="text-ABC text-blue">Message</text>
-      <!-- last-child选择器-->
-    </view></view>
-<form>
-<view class="cu-form-group margin-top">
-		<view class="title">大学</view>
-		<picker bindchange="PickerChange" value="{{index}}" range="{{picker}}"  range-key="name">
-			<view class="picker">
-				{{index?picker[index].name:'选择大学'}}
-			</view>
-		</picker>
-	</view>
-	<view class="cu-form-group">
-		<view class="title">姓名</view>
-		<input placeholder="" value='{{name}}'></input>
-	</view>
-		<view class="cu-form-group">
-		<view class="title">学号</view>
-		<input placeholder="" value='{{num}}'></input>
-	</view>
-	<view class="cu-form-group">
-		<view class="title">学院</view>
-		<input placeholder="" value='{{academy}}'></input>
-	</view>
+        <text class="text-xl text-bold text-blue">个人信息</text>
+        <text class="text-ABC text-blue">Message</text>
+        <!-- last-child选择器-->
+    </view>
+</view>
+<form bindsubmit='updateInfo'>
+    <view class="cu-form-group margin-top">
+        <view class="title">大学</view>
+        <picker bindchange="PickerChange" value="{{userInfo.school}}" range="{{picker}}" range-key="name" name='school'>
+            <view class="picker">
+                {{userInfo.school?picker[userInfo.school].name:'选择大学'}}
+            </view>
+        </picker>
+    </view>
     <view class="cu-form-group">
-		<view class="title">专业班级</view>
-		<input placeholder="" value='{{major}}'></input>
-	</view>
-   <view class="cu-form-group">
-		<view class="title">手机</view>
-		<input placeholder="" value='{{major}}'></input>
-	</view>
-  	<view class="cu-form-group">
+        <view class="title">姓名</view>
+        <input placeholder="" value='{{userInfo.name}}' name='name'></input>
+    </view>
+    <view class="cu-form-group">
+        <view class="title">学号</view>
+        <input placeholder="" value='{{userInfo.CSUid}}' name='CSUid'></input>
+    </view>
+    <view class="cu-form-group">
+        <view class="title">学院</view>
+        <input placeholder="" value='{{userInfo.college}}' name='college'></input>
+    </view>
+    <view class="cu-form-group">
+        <view class="title">专业班级</view>
+        <input placeholder="" value='{{userInfo.klass}}' name='klass'></input>
+    </view>
+    <view class="cu-form-group">
+        <view class="title">手机</view>
+        <input placeholder="" value='{{userInfo.phone}}' name='phone'></input>
+    </view>
+    <!-- <view class="cu-form-group">
 		<view class="title">生日</view>
-		<picker mode="date" value="{{date}}" start="2015-09-01" end="2020-09-01" bindchange="DateChange">
+		<picker mode="date" value="{{userInfo.}}" start="2015-09-01" end="2020-09-01" bindchange="DateChange">
 			<view class="picker">
 				{{date}}
 			</view>
 		</picker>
-	</view>
- <view class="cu-form-group">
-		<view class="title">邮箱</view>
-		<input placeholder="" value='{{major}}'></input>
-	</view>
+	</view> -->
+    <view class="cu-form-group">
+        <view class="title">邮箱</view>
+        <input placeholder="" value='{{userInfo.email}}' name='email'></input>
+    </view>
+    <view class="cu-form-group">
+        <view class="title">个人简介</view>
+        <textarea placeholder="" value='{{userInfo.introduction}}' name='introduction'></textarea>
+    </view>
+    <view class="padding flex flex-direction align-center">
+        <button class="cu-btn bg-blue margin-tb-sm lg" style='width:400rpx' form-type='submit'>确认</button>
+    </view>
 </form>
-
-<view class="padding flex flex-direction align-center">
-  <button class="cu-btn bg-blue margin-tb-sm lg" style='width:400rpx'>确认</button>
-</view>
