--- a/pages/rookie/signup/signup.wxml
+++ b/pages/rookie/signup/signup.wxml
@@ -5,15 +5,16 @@
       <text class="text-ABC text-blue">SignUp</text>
 
     </view></view> -->
-<view class='signup'>
- <view class="cu-avatar xl round touxiang" style="background-image:url(https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike92%2C5%2C5%2C92%2C30/sign=0906e55a07e93901420f856c1a853f82/962bd40735fae6cd0e56f61b09b30f2443a70fed.jpg);"></view>
-<view class='cont'>
- <view class="title">
-      <view class="text-cut title text-blue text-bold" style='font-size:32rpx;'>中南大学学生会</view>
+<view class='signup margin-bottom' wx:for="{{signList}}">
+    <view class="cu-avatar xl round touxiang bg-white" style="background-image:url({{item.orgInfo.post_url?item.orgInfo.post_url:'/imgs/sign.jpg'}});"></view>
+    <view class='cont'>
+        <view class="title">
+            <view class="text-cut title text-blue text-bold" style='font-size:32rpx;display:inline-block'>{{item.orgInfo.name}}</view>
+            
+        <button class='cu-btn round bg-red shadow sm margin-left' data-sid='{{item.signUpInfo.sid}}' bindtap='cancelSign'>取消报名</button>
+        </view>
+        <view class="simpleinro">{{item.signUpInfo.name}}</view>
+        <view class='time'>提交时间：{{item.create_time}}</view>
+        <view class='time' wx:if="{{item.interviewInfo[0].place && item.interviewInfo[0].time}}">面试时间：{{item.interviewInfo[0].place}} {{item.interviewInfo[0].time}}</view>
     </view>
-   <view class="simpleinro">意向部门：组织部,办公室</view>
-   <view class='time'>笔试时间：12.30 C座202</view>
-   <view class='time'>面试时间：12.30 C座202</view>
- </view>
-   
 </view>
